k8s-yml/frontend/eks-fe-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: eks-fe-deploy
  name: eks-fe-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: eks-fe-deploy
  type: ClusterIP
status:
  loadBalancer: {}
